fix seminar form background shadow issues on smaller screens

--- a/_sass/pages/_seminar.scss
+++ b/_sass/pages/_seminar.scss
@@ -462,7 +462,7 @@ h3.seminar-header-time {
     width: 75%;
     margin-bottom: 20px;
 
-    &:after { display: none; }
+    &:before { display: none; }
   }
 
   @media screen and ( max-width: $medium ) {
